<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.15"
            android:contentDescription="@string/background"
            android:scaleType="center"
            android:src="@drawable/pozadina"
            android:visibility="visible" />


    </LinearLayout>
    <TextView
        style="@style/Text_style"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ime"
        android:textAlignment="center"
        android:textSize="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        />
    <Button
        android:id="@+id/credits"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAllCaps="false"
        android:onClick="Credits"
        android:text="@string/credits"
        android:textColor="#000000"
        android:width="30pt"
        android:height="20pt"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        android:background="@drawable/shadow_button_layer_list"/>
    <Button
        android:id="@+id/upute"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAllCaps="false"
        android:onClick="Upute"
        android:text="@string/upute"
        android:textColor="#000000"
        android:width="30pt"
        android:height="20pt"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        android:background="@drawable/shadow_button_layer_list"/>
    <Button
        android:id="@+id/buttonTreseta"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2pt"
        android:textAllCaps="false"
        android:onClick="Treseta"
        android:text="@string/treseta"
        android:textColor="#000000"
        android:width="110pt"
        android:height="60pt"
        android:textSize="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        android:background="@drawable/shadow_button_layer_list"/>
    <Button
        android:id="@+id/buttonBriskula"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:onClick="Briskula"
        android:textAllCaps="false"
        android:text="@string/briskula"
        android:textColor="#000000"
        android:width="110pt"
        android:height="60pt"
        android:textSize="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77"
        android:background="@drawable/shadow_button_layer_list"
        />
</androidx.constraintlayout.widget.ConstraintLayout>